<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/board_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false" >
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/button_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/add_black"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/selector_state"
                android:button="@null"
                android:gravity="center"
                android:text="@string/btn_add_black"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/add_white"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/selector_state"
                android:button="@null"
                android:gravity="center"
                android:text="@string/btn_add_white"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/add_black_or_white"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/selector_state"
                android:button="@null"
                android:gravity="center"
                android:text="@string/btn_add_black_or_white"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/delete_stone"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/selector_state"
                android:button="@null"
                android:gravity="center"
                android:text="@string/btn_delete_stone"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/reset_board"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/selector_state"
                android:button="@null"
                android:gravity="center"
                android:checked="true"
                android:text="@string/btn_reset"
                android:textSize="14sp" />
        </RadioGroup>

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/search" />
    </LinearLayout>

</ScrollView>